# ME4503_Robotics_Project_PicoW_Program

./: .gitignore  CMakeLists.txt  README.md  flash.sh
.agent/: AGENT.md  architecture.md  project_description.md
.agent/plans/: phase1_implementation_plan.md
.agent/prompts/: starting_prompt.md
src/: main.cpp
src/common/: CMakeLists.txt  gpio_irq_dispatch.cpp  gpio_irq_dispatch.h  lwipopts.h  pin_config.h  robot_state.h  shared_state.cpp  shared_state.h
src/control/: CmakeLists.txt  PID_algo.h  line_following.h  mecanum_kinematics.h
src/core0/: CMakeLists.txt  core0_main.cpp  core0_main.h  http_server.cpp  http_server.h  json_protocol.cpp  json_protocol.h  websocket.cpp  websocket.h  wifi_setup.cpp  wifi_setup.h
src/core1/: CMakeLists.txt  core1_main.cpp  core1_main.h
src/drivers/: CmakeLists.txt  imu_mpu9250.h  ir_qtr8rc.h  motor_tb6612.h  tof_vl53l0x.h
src/tests/: CMakeLists.txt  led_test.cpp  led_test.h
